--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angular4 Spring Boot JWT Starter</title>
+  <title>Angular5 Spring Boot</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   <meta property="og:site_name" content="Angular4 Spring Boot JWT Starter">
   <meta property="og:title" content="Angular4 Spring Boot JWT Starter">
-  <meta property="og:description" content="An Angular full stack starter kit featuring Angular 4, Router, Forms, Http, Services, Spring boot, JSON Web Token">
+  <meta property="og:description"
+        content="An Angular full stack starter kit featuring Angular 4, Router, Forms, Http, Services, Spring boot, JSON Web Token">
   <meta property="og:url" content="http://angular-spring-starter.fanjin.computer">
   <meta property="og:image" content="http://angular-spring-starter.fanjin.computer/assets/image/user.png">
 
@@ -18,6 +19,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+<app-root>Loading...</app-root>
 </body>
 </html>
